--- a/AutoClick/wwwroot/css/mi-perfil.css
+++ b/AutoClick/wwwroot/css/mi-perfil.css
@@ -251,7 +251,7 @@
 .form-group {
     flex: 1;
     position: relative;
-    height: 61px;
+    height: 68px;
 }
 
 .form-group.full-width {
@@ -267,6 +267,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     z-index: 2;
+    margin-bottom: 8px;
 }
 
 .required {
@@ -279,7 +280,7 @@
     width: 100%;
     height: 44px;
     position: absolute;
-    top: 17px;
+    top: 24px;
     left: 0;
     padding: 8px 16px;
     background: #02081C;
@@ -297,7 +298,7 @@
     height: auto;
     padding: 12px 16px;
     resize: none;
-    top: 17px;
+    top: 24px;
     overflow: hidden;
 }
 
