--- a/AutoClick/Pages/HistorialPagos.cshtml
+++ b/AutoClick/Pages/HistorialPagos.cshtml
@@ -82,6 +82,8 @@
     </div>
 </div>
 
+<partial name="~/Pages/Shared/_Footer.cshtml" />
+
 @section Styles {
     <link rel="stylesheet" href="~/css/historial-pagos.css" />
 }
