--- a/AutoClick/wwwroot/css/site.css
+++ b/AutoClick/wwwroot/css/site.css
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  margin: 0;
+  padding: 0;
 }
 
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
